aggiornamento dati col prof

--- a/test-javascript.ipynb
+++ b/test-javascript.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -15,6 +15,40 @@
    ],
    "source": [
     "console.log('Hello, World!');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Esempi di come si comportano i tipi di dato primitivi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let age = 30;\n",
+    "    let age1 = age;\n",
+    "    age = 31;\n",
+    "    console.log(age1);\n",
+    "    console.log(age);\n",
+    "\n",
+    "    let immutable = \"hello\";\n",
+    "    let copy = immutable;\n",
+    "    \n",
+    "}"
    ]
   }
  ],
