--- a/test-python.ipynb
+++ b/test-python.ipynb
@@ -2,9 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Expected ';', '}' or <eof> at repl.tsx:1:6\n\n  from flask import Flask\n       ~~~~~",
+     "evalue": " ",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
     "from flask import Flask"
    ]
@@ -12,21 +19,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Deno",
+   "language": "typescript",
+   "name": "deno"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "file_extension": ".ts",
+   "mimetype": "text/x.typescript",
+   "name": "typescript",
+   "nb_converter": "script",
+   "pygments_lexer": "typescript",
+   "version": "5.3.3"
   }
  },
  "nbformat": 4,
