--- a/test-javascript.ipynb
+++ b/test-javascript.ipynb
@@ -50,6 +50,30 @@
     "    \n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32m\"object\"\u001b[39m"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "typeof 1.23;\n",
+    "typeof \"Hello\";\n",
+    "typeof true;\n",
+    "typeof [];\n",
+    "typeof {};"
+   ]
   }
  ],
  "metadata": {
